# rusty-resume

./: .deepsource.toml  .gitignore  Cargo.toml  Dockerfile  README.md
.devcontainer/: compose.yml  devcontainer.json
src/: main.rs
src/crud/: mod.rs
src/models/: basic_info.rs  certifications.rs  competencies.rs  education.rs  experience.rs  interests.rs  mod.rs  page.rs  preferences.rs  response.rs  side_projects.rs  skills.rs  social_links.rs  users.rs
src/routes/: basic_info.rs  certifications.rs  competencies.rs  education.rs  experience.rs  interests.rs  mod.rs  preferences.rs  side_projects.rs  skills.rs  social_links.rs  users.rs
