[package]
name = "rusty-resume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres"] }
rocket = { "version" = "0.5.0", "features" = ["json", "uuid"] }
uuid = { "version" = "1.6.1", features = [
    "v7",
    "fast-rng",
    "macro-diagnostics",
] }
